gen/abc/parser/BodyParser.java
// Generated from /home/margaret/workspace/abcplayer/src/abc/parser/Body.g4 by ANTLR 4.7
package abc.parser;

package abc.parser;
// Do not edit this .java file! Edit the .g4 file and re-run Antlr.

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BodyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, NEWLINE=8, TUPLETSPEC=9, 
		BASENOTE=10, ACCIDENTAL=11, BARLINE=12, REPEATBEGINBAR=13, REPEATENDBAR=14, 
		NTHREPEAT=15, SECTIONBEGINBAR=16, SECTIONENDBAR=17, REST=18, NUMBER=19, 
		WHITESPACE=20, CHAR=21;
	public static final int
		RULE_body = 0, RULE_section = 1, RULE_sectionelement = 2, RULE_voicepart = 3, 
		RULE_voicepartelement = 4, RULE_repeatstart = 5, RULE_repeatend = 6, RULE_repeatfull = 7, 
		RULE_repeatendingline = 8, RULE_repeatending = 9, RULE_line = 10, RULE_measure = 11, 
		RULE_measureelement = 12, RULE_tupletelement = 13, RULE_note = 14, RULE_noterest = 15, 
		RULE_pitch = 16, RULE_octave = 17, RULE_notelength = 18, RULE_tuplet = 19, 
		RULE_chord = 20, RULE_fieldvoice = 21, RULE_endofline = 22, RULE_comment = 23, 
		RULE_text = 24;
	public static final String[] ruleNames = {
		"body", "section", "sectionelement", "voicepart", "voicepartelement", 
		"repeatstart", "repeatend", "repeatfull", "repeatendingline", "repeatending", 
		"line", "measure", "measureelement", "tupletelement", "note", "noterest", 
		"pitch", "octave", "notelength", "tuplet", "chord", "fieldvoice", "endofline", 
		"comment", "text"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'''", "','", "'/'", "'['", "']'", "'V:'", "'%'", null, null, null, 
		null, null, "'|:'", "':|'", null, null, null, "'z'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, "NEWLINE", "TUPLETSPEC", 
		"BASENOTE", "ACCIDENTAL", "BARLINE", "REPEATBEGINBAR", "REPEATENDBAR", 
		"NTHREPEAT", "SECTIONBEGINBAR", "SECTIONENDBAR", "REST", "NUMBER", "WHITESPACE", 
		"CHAR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Body.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    // This method makes the parser stop running if it encounters
	    // invalid input and throw a RuntimeException.
	    public void reportErrorsAsExceptions() {
	        // To prevent any reports to standard error, add this line:
	        //removeErrorListeners();
	        
	        addErrorListener(new BaseErrorListener() {
	            public void syntaxError(Recognizer<?, ?> recognizer,
	                                    Object offendingSymbol, 
	                                    int line, int charPositionInLine,
	                                    String msg, RecognitionException e) {
	                throw new ParseCancellationException(msg, e);
	            }
	        });
	    }

	public BodyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class BodyContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(BodyParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(BodyParser.NEWLINE, i);
		}
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BodyListener ) ((BodyListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BodyListener ) ((BodyListener)listener).exitBody(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(50);
				match(NEWLINE);
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(56);
				section();
				}
				}
				setState(59); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__5) | (1L << TUPLETSPEC) | (1L << BASENOTE) | (1L << ACCIDENTAL) | (1L << BARLINE) | (1L << REPEATBEGINBAR) | (1L << NTHREPEAT) | (1L << SECTIONBEGINBAR) | (1L << REST) | (1L << WHITESPACE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionContext extends ParserRuleContext {
		public List<TerminalNode> EOF() { return getTokens(BodyParser.EOF); }
		public TerminalNode EOF(int i) {
			return getToken(BodyParser.EOF, i);
		}
		public List<SectionelementContext> sectionelement() {
			return getRuleContexts(SectionelementContext.class);
		}
		public SectionelementContext sectionelement(int i) {
			return getRuleContext(SectionelementContext.class,i);
		}
		public TerminalNode SECTIONENDBAR() { return getToken(BodyParser.SECTIONENDBAR, 0); }
		public List<TerminalNode> WHITESPACE() { return getTokens(BodyParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(BodyParser.WHITESPACE, i);
		}
		public List<EndoflineContext> endofline() {
			return getRuleContexts(EndoflineContext.class);
		}
		public EndoflineContext endofline(int i) {
			return getRuleContext(EndoflineContext.class,i);
		}
		public List<VoicepartContext> voicepart() {
			return getRuleContexts(VoicepartContext.class);
		}
		public VoicepartContext voicepart(int i) {
			return getRuleContext(VoicepartContext.class,i);
		}
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BodyListener ) ((BodyListener)listener).enterSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BodyListener ) ((BodyListener)listener).exitSection(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_section);
		int _la;
		try {
			int _alt;
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(62); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(61);
						sectionelement();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(64); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SECTIONENDBAR) {
					{
					setState(66);
					match(SECTIONENDBAR);
					}
				}

				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITESPACE) {
					{
					{
					setState(69);
					match(WHITESPACE);
					}
					}
					setState(74);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(84);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__6:
				case NEWLINE:
					{
					setState(76); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(75);
						endofline();
						}
						}
						setState(78); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==T__6 || _la==NEWLINE );
					setState(81);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						setState(80);
						match(EOF);
						}
						break;
					}
					}
					break;
				case EOF:
					{
					setState(83);
					match(EOF);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(94);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(86);
						voicepart();
						setState(88); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(87);
							endofline();
							}
							}
							setState(90); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( _la==T__6 || _la==NEWLINE );
						}
						} 
					}
					setState(96);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				{
				setState(97);
				voicepart();
				setState(98);
				match(SECTIONENDBAR);
				setState(108);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__6:
				case NEWLINE:
					{
					setState(100); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(99);
						endofline();
						}
						}
						setState(102); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==T__6 || _la==NEWLINE );
					setState(105);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
					case 1:
						{
						setState(104);
						match(EOF);
						}
						break;
					}
					}
					break;
				case EOF:
					{
					setState(107);
					match(EOF);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(122); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(110);
						voicepart();
						setState(120);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case T__6:
						case NEWLINE:
							{
							setState(112); 
							_errHandler.sync(this);
							_la = _input.LA(1);
							do {
								{
								{
								setState(111);
								endofline();
								}
								}
								setState(114); 
								_errHandler.sync(this);
								_la = _input.LA(1);
							} while ( _la==T__6 || _la==NEWLINE );
							setState(117);
							_errHandler.sync(this);
							switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
							case 1:
								{
								setState(116);
								match(EOF);
								}
								break;
							}
							}
							break;
						case EOF:
							{
							setState(119);
							match(EOF);
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(124); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionelementContext extends ParserRuleContext {
		public List<VoicepartelementContext> voicepartelement() {
			return getRuleContexts(VoicepartelementContext.class);
		}
		public VoicepartelementContext voicepartelement(int i) {
			return getRuleContext(VoicepartelementContext.class,i);
		}
		public TerminalNode BARLINE() { return getToken(BodyParser.BARLINE, 0); }
		public TerminalNode SECTIONBEGINBAR() { return getToken(BodyParser.SECTIONBEGINBAR, 0); }
		public List<EndoflineContext> endofline() {
			return getRuleContexts(EndoflineContext.class);
		}
		public EndoflineContext endofline(int i) {
			return getRuleContext(EndoflineContext.class,i);
		}
		public SectionelementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sectionelement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BodyListener ) ((BodyListener)listener).enterSectionelement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BodyListener ) ((BodyListener)listener).exitSectionelement(this);
		}
	}

	public final SectionelementContext sectionelement() throws RecognitionException {
		SectionelementContext _localctx = new SectionelementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sectionelement);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BARLINE) {
				{
				setState(128);
				match(BARLINE);
				}
			}

			{
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SECTIONBEGINBAR) {
				{
				setState(131);
				match(SECTIONBEGINBAR);
				}
			}

			setState(142);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,21,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(134);
					voicepartelement();
					setState(136); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(135);
						endofline();
						}
						}
						setState(138); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==T__6 || _la==NEWLINE );
					}
					} 
				}
				setState(144);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,21,_ctx);
			}
			setState(145);
			voicepartelement();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VoicepartContext extends ParserRuleContext {
		public FieldvoiceContext fieldvoice() {
			return getRuleContext(FieldvoiceContext.class,0);
		}
		public List<VoicepartelementContext> voicepartelement() {
			return getRuleContexts(VoicepartelementContext.class);
		}
		public VoicepartelementContext voicepartelement(int i) {
			return getRuleContext(VoicepartelementContext.class,i);
		}
		public TerminalNode WHITESPACE() { return getToken(BodyParser.WHITESPACE, 0); }
		public TerminalNode SECTIONBEGINBAR() { return getToken(BodyParser.SECTIONBEGINBAR, 0); }
		public List<EndoflineContext> endofline() {
			return getRuleContexts(EndoflineContext.class);
		}
		public EndoflineContext endofline(int i) {
			return getRuleContext(EndoflineContext.class,i);
		}
		public VoicepartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_voicepart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BodyListener ) ((BodyListener)listener).enterVoicepart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BodyListener ) ((BodyListener)listener).exitVoicepart(this);
		}
	}

	public final VoicepartContext voicepart() throws RecognitionException {
		VoicepartContext _localctx = new VoicepartContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_voicepart);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			fieldvoice();
			setState(149);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,22,_ctx) ) {
			case 1:
				{
				setState(148);
				match(WHITESPACE);
				}
				break;
			}
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SECTIONBEGINBAR) {
				{
				setState(151);
				match(SECTIONBEGINBAR);
				}
			}

			setState(162);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,25,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(154);
					voicepartelement();
					setState(156); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(155);
						endofline();
						}
						}
						setState(158); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==T__6 || _la==NEWLINE );
					}
					} 
				}
				setState(164);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,25,_ctx);
			}
			setState(165);
			voicepartelement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VoicepartelementContext extends ParserRuleContext {
		public RepeatfullContext repeatfull() {
			return getRuleContext(RepeatfullContext.class,0);
		}
		public RepeatendinglineContext repeatendingline() {
			return getRuleContext(RepeatendinglineContext.class,0);
		}
		public RepeatstartContext repeatstart() {
			return getRuleContext(RepeatstartContext.class,0);
		}
		public RepeatendContext repeatend() {
			return getRuleContext(RepeatendContext.class,0);
		}
		public LineContext line() {
			return getRuleContext(LineContext.class,0);
		}
		public VoicepartelementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_voicepartelement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BodyListener ) ((BodyListener)listener).enterVoicepartelement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BodyListener ) ((BodyListener)listener).exitVoicepartelement(this);
		}
	}

	public final VoicepartelementContext voicepartelement() throws RecognitionException {
		VoicepartelementContext _localctx = new VoicepartelementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_voicepartelement);
		try {
			setState(172);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,26,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(167);
				repeatfull();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(168);
				repeatendingline();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(169);
				repeatstart();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(170);
				repeatend();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(171);
				line();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepeatstartContext extends ParserRuleContext {
		public TerminalNode REPEATBEGINBAR() { return getToken(BodyParser.REPEATBEGINBAR, 0); }
		public List<MeasureContext> measure() {
			return getRuleContexts(MeasureContext.class);
		}
		public MeasureContext measure(int i) {
			return getRuleContext(MeasureContext.class,i);
		}
		public List<TerminalNode> BARLINE() { return getTokens(BodyParser.BARLINE); }
		public TerminalNode BARLINE(int i) {
			return getToken(BodyParser.BARLINE, i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(BodyParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(BodyParser.WHITESPACE, i);
		}
		public RepeatstartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeatstart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BodyListener ) ((BodyListener)listener).enterRepeatstart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BodyListener ) ((BodyListener)listener).exitRepeatstart(this);
		}
	}

	public final RepeatstartContext repeatstart() throws RecognitionException {
		RepeatstartContext _localctx = new RepeatstartContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_repeatstart);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(REPEATBEGINBAR);
			setState(182);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,28,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(175);
					measure();
					setState(176);
					match(BARLINE);
					setState(178);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,27,_ctx) ) {
					case 1:
						{
						setState(177);
						match(WHITESPACE);
						}
						break;
					}
					}
					} 
				}
				setState(184);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,28,_ctx);
			}
			setState(185);
			measure();
			setState(190);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,30,_ctx) ) {
			case 1:
				{
				setState(186);
				match(BARLINE);
				setState(188);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,29,_ctx) ) {
				case 1:
					{
					setState(187);
					match(WHITESPACE);
					}
					break;
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepeatendContext extends ParserRuleContext {
		public List<MeasureContext> measure() {
			return getRuleContexts(MeasureContext.class);
		}
		public MeasureContext measure(int i) {
			return getRuleContext(MeasureContext.class,i);
		}
		public List<TerminalNode> BARLINE() { return getTokens(BodyParser.BARLINE); }
		public TerminalNode BARLINE(int i) {
			return getToken(BodyParser.BARLINE, i);
		}
		public List<RepeatendingContext> repeatending() {
			return getRuleContexts(RepeatendingContext.class);
		}
		public RepeatendingContext repeatending(int i) {
			return getRuleContext(RepeatendingContext.class,i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(BodyParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(BodyParser.WHITESPACE, i);
		}
		public RepeatendContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeatend; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BodyListener ) ((BodyListener)listener).enterRepeatend(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BodyListener ) ((BodyListener)listener).exitRepeatend(this);
		}
	}

	public final RepeatendContext repeatend() throws RecognitionException {
		RepeatendContext _localctx = new RepeatendContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_repeatend);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(199);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,32,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(192);
					measure();
					setState(193);
					match(BARLINE);
					setState(195);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,31,_ctx) ) {
					case 1:
						{
						setState(194);
						match(WHITESPACE);
						}
						break;
					}
					}
					} 
				}
				setState(201);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,32,_ctx);
			}
			setState(202);
			measure();
			setState(207);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BARLINE) {
				{
				setState(203);
				match(BARLINE);
				setState(205);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WHITESPACE) {
					{
					setState(204);
					match(WHITESPACE);
					}
				}

				}
			}

			setState(210); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(209);
					repeatending();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(212); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,35,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepeatfullContext extends ParserRuleContext {
		public TerminalNode REPEATBEGINBAR() { return getToken(BodyParser.REPEATBEGINBAR, 0); }
		public List<MeasureContext> measure() {
			return getRuleContexts(MeasureContext.class);
		}
		public MeasureContext measure(int i) {
			return getRuleContext(MeasureContext.class,i);
		}
		public TerminalNode REPEATENDBAR() { return getToken(BodyParser.REPEATENDBAR, 0); }
		public List<TerminalNode> BARLINE() { return getTokens(BodyParser.BARLINE); }
		public TerminalNode BARLINE(int i) {
			return getToken(BodyParser.BARLINE, i);
		}
		public List<RepeatendingContext> repeatending() {
			return getRuleContexts(RepeatendingContext.class);
		}
		public RepeatendingContext repeatending(int i) {
			return getRuleContext(RepeatendingContext.class,i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(BodyParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(BodyParser.WHITESPACE, i);
		}
		public RepeatfullContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeatfull; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BodyListener ) ((BodyListener)listener).enterRepeatfull(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BodyListener ) ((BodyListener)listener).exitRepeatfull(this);
		}
	}

	public final RepeatfullContext repeatfull() throws RecognitionException {
		RepeatfullContext _localctx = new RepeatfullContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_repeatfull);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(214);
			match(REPEATBEGINBAR);
			setState(222);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,37,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(215);
					measure();
					setState(216);
					match(BARLINE);
					setState(218);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,36,_ctx) ) {
					case 1:
						{
						setState(217);
						match(WHITESPACE);
						}
						break;
					}
					}
					} 
				}
				setState(224);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,37,_ctx);
			}
			setState(225);
			measure();
			setState(230);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BARLINE) {
				{
				setState(226);
				match(BARLINE);
				setState(228);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WHITESPACE) {
					{
					setState(227);
					match(WHITESPACE);
					}
				}

				}
			}
